Native/Test/KL/struct-errors.kl
struct Foo
{
  UnregisteredType a;
};

struct Bar
{
  Integer a;
  Scalar b;
};

struct Bar
{
  Scalar a;
};
